# NeuralNetworkFromScratch

./: .gitignore  README.md  pyproject.toml
core/network/: layer.py  network.py
core/utilities/: activation.py  loss.py
example/: approxiamting_sinus.ipynb  approximating_sinus.ipynb  testing_network.ipynb
