[project]
name = "neuralnetworkfromscratch"
version = "0.1.0"
description = ""
authors = [
    {name = "itsaymenben",email = "aymen.benamrane@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14.1"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "networkx (>=3.6.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
